--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -5,10 +5,7 @@ on:
   - cron: "*/5 * * * *"
 
 jobs:
-  update-hello:
-    env:
-      # Set the NODE_ENV to test
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  update_hello_file:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
